fix alignment with tracks and normalize font size

--- a/app/assets/stylesheets/components/_user_detail.scss
+++ b/app/assets/stylesheets/components/_user_detail.scss
@@ -22,7 +22,7 @@ section.user-detail-billboard {
 h1.user-tracks-header {
   position: absolute;
   color: $darker-orange;
-  font-size: 18px;
+  font-size: 24px;
   border-bottom: 1px solid $orange;
   background-color: white;
   width: 160px;
@@ -104,7 +104,7 @@ section.user-detail-1 {
   flex-wrap: wrap;
   width: 400px;
   flex-direction: column;
-  top: 350px;
+  top: 281px;
   right: 5vw;
   border: 1px solid $gray;
   padding: 15px;
